third_party/rust/uniffi/tests/ui/proc_macro_arc.stderr
error[E0271]: type mismatch resolving `<Arc<child::Foo> as child::_::_::{closure#0}::TypeEq>::This == Arc<Foo>`
  --> tests/ui/proc_macro_arc.rs:18:22
   |
18 |     fn take_foo(foo: Arc<Foo>) {
   |                      ^^^^^^^^ type mismatch resolving `<Arc<child::Foo> as child::_::_::{closure#0}::TypeEq>::This == Arc<Foo>`
   |
note: expected this to be `Arc<Foo>`
  --> tests/ui/proc_macro_arc.rs:18:22
   |
18 |     fn take_foo(foo: Arc<Foo>) {
   |                      ^^^
   = note: enum `child::Foo` and struct `Foo` have similar names, but are actually distinct types
note: enum `child::Foo` is defined in module `crate::child` of the current crate
  --> tests/ui/proc_macro_arc.rs:15:5
   |
15 |     enum Foo {}
   |     ^^^^^^^^
note: struct `Foo` is defined in module `crate` of the current crate
  --> tests/ui/proc_macro_arc.rs:5:1
   |
5  | pub struct Foo;
   | ^^^^^^^^^^^^^^
note: required by a bound in `child::_::_::{closure#0}::assert_type_eq_all`
  --> tests/ui/proc_macro_arc.rs:18:22
   |
18 |     fn take_foo(foo: Arc<Foo>) {
   |                      ^^^
   |                      |
   |                      required by a bound in this
   |                      required by this bound in `child::_::_::{closure#0}::assert_type_eq_all`
   = note: this error originates in the macro `::uniffi::deps::static_assertions::assert_type_eq_all` (in Nightly builds, run with -Z macro-backtrace for more info)
